Fix player-thumb stuck bug

--- a/addons/player-thumb/userstyle.css
+++ b/addons/player-thumb/userstyle.css
@@ -1,5 +1,5 @@
 .sa-project-thumb {
-  display: none; /* For editor only, not fullscreen */
+  display: inline;
   position: absolute;
   background-color: var(--darkWww-page, #fcfcfc);
 }
@@ -10,7 +10,6 @@
 }
 
 body:not(.sa-body-editor) .sa-project-thumb {
-  display: inline;
   top: 1px;
   left: 1px;
   width: calc(100% - 2px);
@@ -29,7 +28,6 @@ body:not(.sa-body-editor) .sa-project-thumb.loading {
 }
 
 [class*="stage-wrapper_full-screen"] .sa-project-thumb {
-  display: inline;
   top: 3px;
   left: 3px;
   height: calc(100% - 6px);
